# python-package-experiment

./: .travis.yml  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
acme/: __init__.py  cli.py  core.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
tests/: test_acme.py  test_core.py
