[metadata]
name = acme
version = 0.1.0
description = acme
long_description = file: README.rst, LICENSE.txt
author = Norio Kimura
author_email = kimura@monad.tv
url = https://github.com/norioxkimura/python-package-experiment
license = MIT

[options]
packages = find:
zip_safe = False

[options.entry_points]
console_scripts =
    hello = acme.core:hello

[options.extras_require]
dev =
    pytest
